Fix reset icon visibility for filter and search inputs

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -529,7 +529,7 @@ form {
 	cursor: pointer;
 }
 
-.filter-input:not(:valid) ~ .input-reset {
+.filter-input:placeholder-shown ~ .input-reset {
 	display: none;
 }
 
